; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_namespace.c_unlock_mount.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_namespace.c_unlock_mount.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mountpoint = type { %struct.dentry* }
%struct.dentry = type { i32 }

@mount_lock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mountpoint*)* @unlock_mount to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unlock_mount(%struct.mountpoint* %0) #0 {
  %2 = alloca %struct.mountpoint*, align 8
  %3 = alloca %struct.dentry*, align 8
  store %struct.mountpoint* %0, %struct.mountpoint** %2, align 8
  %4 = load %struct.mountpoint*, %struct.mountpoint** %2, align 8
  %5 = getelementptr inbounds %struct.mountpoint, %struct.mountpoint* %4, i32 0, i32 0
  %6 = load %struct.dentry*, %struct.dentry** %5, align 8
  store %struct.dentry* %6, %struct.dentry** %3, align 8
  %7 = call i32 @read_seqlock_excl(i32* @mount_lock)
  %8 = load %struct.mountpoint*, %struct.mountpoint** %2, align 8
  %9 = call i32 @put_mountpoint(%struct.mountpoint* %8)
  %10 = call i32 @read_sequnlock_excl(i32* @mount_lock)
  %11 = call i32 (...) @namespace_unlock()
  %12 = load %struct.dentry*, %struct.dentry** %3, align 8
  %13 = getelementptr inbounds %struct.dentry, %struct.dentry* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @inode_unlock(i32 %14)
  ret void
}

declare dso_local i32 @read_seqlock_excl(i32*) #1

declare dso_local i32 @put_mountpoint(%struct.mountpoint*) #1

declare dso_local i32 @read_sequnlock_excl(i32*) #1

declare dso_local i32 @namespace_unlock(...) #1

declare dso_local i32 @inode_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
